@@ -501,7 +501,8 @@ typedef enum {
 	SQL_SENSITIVE_LIKE,
 	SQL_INSENSITIVE_LIKE,
 	SQL_ENCODE_ESCAPE,
-	SQL_STRCASE
+	SQL_STRCASE,
+	SQL_PARTIAL
 		
 } sql_fragment_t;
 
