@@ -1,3 +1,11 @@
+2007-08-27  Paul J Stevens <paul@nfg.nl>
+
+	* db.c, db.h, dbmail-mailbox.c, dbmail.h.in, dbmailtypes.h, 
+	man/Makefile.in, modules/dbmysql.c, modules/dbpgsql.c, 
+	modules/dbsqlite.c, sql/postgresql/create_tables.pgsql, 
+	sql/postgresql/migrate_from_2.0_to_2.2.pgsql:
+	add partial index to headervalue field (bug #634)
+
 2007-08-26  Paul J Stevens <paul@nfg.nl>
 
 	* memblock.c, memblock.h:
